# ducklake-exploration

./: .env  .env.example  .gitignore  PLAN.md  README.md  docker-compose.yml  ducklake-gum  ducklake-installer.sh  ducklake-original.sh  ducklake.conf.example  ducklake.sh  ducklake_demo.ipynb  ducklake_demo.py  ducklake_interactive.py  ducklakekit  ducklakekit-gum  ducklakekit.conf.example  helpers.py  init.sql  pyproject.toml  setup.md  setup.sh
