[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ducklake-tutorial"
version = "0.1.0"
description = "DuckLake tutorial with marimo and PostgreSQL catalog"
authors = [
    {name = "Tutorial Author", email = "author@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    "marimo[sql]>=0.10.0",
    "duckdb>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "psycopg2-binary>=2.9.0",
    "taskipy>=1.12.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "ipython>=8.37.0",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.scripts]
ducklake-demo = "ducklake_demo:cli"

[project.urls]
Homepage = "https://github.com/yourusername/ducklake-tutorial"
Repository = "https://github.com/yourusername/ducklake-tutorial"
Documentation = "https://github.com/yourusername/ducklake-tutorial#readme"

[tool.taskipy.tasks]
# Start PostgreSQL container (Docker)
docker-up = "docker compose up -d"

# Start PostgreSQL container (Podman)
podman-up = "podman volume create postgres_data 2>/dev/null || true && podman run -d --name ducklake-postgres --replace -e POSTGRES_DB=ducklake_catalog -e POSTGRES_USER=ducklake -e POSTGRES_PASSWORD=ducklake123 -e POSTGRES_HOST_AUTH_METHOD=trust -p 5432:5432 -v postgres_data:/var/lib/postgresql/data -v ./init.sql:/docker-entrypoint-initdb.d/init.sql --restart unless-stopped docker.io/library/postgres:15"

# Stop PostgreSQL container (Docker)
docker-down = "docker compose down"

# Stop PostgreSQL container (Podman)
podman-down = "podman stop ducklake-postgres && podman rm ducklake-postgres"

# Start marimo notebook
notebook = "marimo edit ducklake_tutorial.py --host 0.0.0.0 --port 8080 --no-token"

# Complete setup: start docker + marimo
start = "task docker-up && echo 'Waiting for PostgreSQL...' && sleep 3 && task notebook"

# Complete setup: start podman + marimo
start-podman = "task podman-up && echo 'Waiting for PostgreSQL...' && sleep 3 && task notebook"

# Development setup with optional dependencies
dev-install = "uv sync --extra dev"

# Check PostgreSQL status (Docker)
docker-status = "docker compose ps"

# Check PostgreSQL status (Podman)
podman-status = "podman ps --filter name=ducklake-postgres"

# View PostgreSQL logs (Docker)
docker-logs = "docker compose logs postgres"

# View PostgreSQL logs (Podman)
podman-logs = "podman logs ducklake-postgres"

# Reset everything (stop containers, remove volumes) - Docker
reset = "docker compose down -v && docker compose up -d"

# Reset everything (stop containers, remove volumes) - Podman
reset-podman = "podman stop ducklake-postgres && podman rm ducklake-postgres && podman volume rm postgres_data && task podman-up"

# Configure UFW firewall for marimo
setup-firewall = "sudo ufw allow 2718/tcp"

# Reset DuckLake completely (clean slate) - Docker
reset-lake = "rm -rf ./ducklake_data && docker compose exec postgres psql -U ducklake -d ducklake_catalog -c 'DROP SCHEMA IF EXISTS ducklake CASCADE; DROP SCHEMA IF EXISTS main CASCADE; DROP SCHEMA IF EXISTS public CASCADE; CREATE SCHEMA public;'"

# Reset DuckLake completely (clean slate) - Podman
reset-lake-podman = "rm -rf ./ducklake_data && podman exec ducklake-postgres psql -U ducklake -d ducklake_catalog -c 'DROP SCHEMA IF EXISTS ducklake CASCADE; DROP SCHEMA IF EXISTS main CASCADE; DROP SCHEMA IF EXISTS public CASCADE; CREATE SCHEMA public;'"

# Clean reset: stop containers, remove data, restart fresh - Docker
clean-reset = "docker compose down -v && rm -rf ./ducklake_data && docker compose up -d"

# Clean reset: stop containers, remove data, restart fresh - Podman
clean-reset-podman = "podman stop ducklake-postgres && podman rm ducklake-postgres && podman volume rm postgres_data && rm -rf ./ducklake_data && task podman-up"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["ducklake_demo.py", "init.sql", "docker-compose.yml"]

[tool.ruff.lint]
extend-ignore = ["E722", "F401", "F403", "F405"]

[tool.basedpyright]
reportUnusedCallResult = false
reportAny = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnusedParameter = false
reportUnusedVariable = false
reportUnusedImport = false

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.30.1",
    "pandas-stubs>=2.3.0.250703",
]
